Update articla and image gallery page

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             </div>
                             <div class="col-lg-9">
                                 <p class="article-subtitle">Webb Telescope<i>3 hours ago</i></p>
-                                <h5>NASA’s Webb Reaches Alignment Milestone, Optics Working Successfully</h5>
+                                <h5 class="article-title">NASA’s Webb Reaches Alignment Milestone, Optics Working Successfully</h5>
                             </div>
                         </a>
                     </li>
