--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -93,89 +93,108 @@
 
         <div class="row px-2 py-5">
             <div class="col-lg-8">
+                <h2>Image of The Day</h2>
                 <img src="https://www.nasa.gov/sites/default/files/thumbnails/image/51982058640_3306aa1585_o.jpeg" alt="" class="img-fluid">
             </div>
-            <div class="col-lg-4">
-                <h2>Image of The Day</h2>
-                <p class="article-subtitle">Space Launch System Rocket at Dawn<i>6 hours ago</i></p>
-                <p>NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard is seen at sunrise atop a mobile launcher at Launch Complex 39B, Monday, April 4, 2022.</p>
-                <p>Image Credit: NASA/Joel Kowsky</p>
+            <div class="col-lg-4 pb-5">
+                <div style="position: relative; top: 35%;">
+                    <h3>Space Launch System Rocket at Dawn</h3>
+                    <p>NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard is seen at sunrise atop a mobile launcher at Launch Complex 39B, Monday, April 4, 2022.</p>
+                    <button class="btn btn-primary btn-rounded">View Image Feature</button>
+                </div>
             </div>
         </div>
 
-        <div class="row"> 
-            <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/nasa_sls_artemis_i_horizontal.jpg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">Prepping for Wet Dress Rehearsal</h5>
-                        <p>Engineers and technicians are continuing to prepare for the Artemis I wet dress rehearsal test which is slated to begin on April 1 and conclude on April 3.</p>
-                    </div>
-                </a>
+        <div class="row px-4 py-5">
+            <div class="jumbotron row w-100 ml-auto mr-auto">
+                <div class="col-lg-4 ">
+                    <a href="https://www.nasa.gov/image-feature/prepping-for-wet-dress-rehearsal" class="card">
+                        <div class="uni-header">
+                            <h5 class="card-title">Prepping for Wet Dress Rehearsal</h5>
+                        </div>
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/nasa_sls_artemis_i_horizontal.jpg" alt="" class="img-fluid">
+                        <div class="card-body">
+                            <p>Engineers and technicians are continuing to prepare for the Artemis I wet dress rehearsal test which is slated to begin on April 1 and conclude on April 3.</p>
+                            <button class="btn btn-primary btn-rounded">View NASA Images</button>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="https://www.nasa.gov/image-feature/pilot-bob-hines-in-training-for-crew-4" class="card">
+                        <div class="uni-header">
+                            <h5 class="card-title">Pilot Bob Hines in Training for Crew-4</h5>
+                        </div>
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2022e011412.jpg" alt="" class="img-fluid">
+                        <div class="card-body">                            
+                            <p>NASA astronaut and SpaceX Crew-4 pilot Bob Hines is pictured during a training session inside a mockup of the Crew Dragon vehicle at SpaceX Headquarters.</p>
+                            <button class="btn btn-primary btn-rounded">View NASA Images</button>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">
+                    <a href="https://www.nasa.gov/image-feature/mark-vande-hei-and-crew-mates-safely-land" class="card">
+                        <div class="uni-header">
+                            <h5 class="card-title">Mark Vande Hei and Crew Mates Safely Land</h5>
+                        </div>
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51970937381_9d3d2e370a_o.jpeg" alt="" class="img-fluid">
+                        <div class="card-body">
+                            <p>NASA astronaut Mark Vande Hei, left, and cosmonauts Anton Shkaplerov, center, and Pyotr Dubrov are seen inside their Soyuz MS-19 spacecraft after landing.</p>
+                            <button class="btn btn-primary btn-rounded">View Galleries</button>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/pilot-bob-hines-in-training-for-crew-4" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2022e011412.jpg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">Pilot Bob Hines in Training for Crew-4</h5>
-                        <p>NASA astronaut and SpaceX Crew-4 pilot Bob Hines is pictured during a training session inside a mockup of the Crew Dragon vehicle at SpaceX Headquarters.</p>
-                    </div>
-                </a>
-            </div>
-            <div class="col-lg-4">
-                <a href="https://www.nasa.gov/image-feature/mark-vande-hei-and-crew-mates-safely-land" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51970937381_9d3d2e370a_o.jpeg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">Mark Vande Hei and Crew Mates Safely Land</h5>
-                        <p>NASA astronaut Mark Vande Hei, left, and cosmonauts Anton Shkaplerov, center, and Pyotr Dubrov are seen inside their Soyuz MS-19 spacecraft after landing.</p>
-                    </div>
-                </a>
-            </div>
+        </div>
+
+
+        <div class="row py-5"> 
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/a-homecoming-for-mark-vande-hei" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2017e029829_large.jpg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">A Homecoming for Mark Vande Hei</h5>
+                    <div class="captioned-img">
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2017e029829_large.jpg" alt="" class="img-fluid">
+                        <p class="img-caption"><span>A Homecoming for Mark Vande Hei</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/smash-up-how-to-create-rocky-planets" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/pia25161_-_spitzer_collision_cloud.jpg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">Smash-Up: How To Create Rocky Planets</h5>
+                    <div class="captioned-img">
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/pia25161_-_spitzer_collision_cloud.jpg" alt="" class="img-fluid">
+                        <p class="img-caption"><span>Smash-Up: How To Create Rocky Planets</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/pioneering-female-aviator-wally-funk-wins-2022-michael-collins-trophy-for-lifetime" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51959521353_17667db8e7_o.jpeg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">Pioneering Female Aviator Wally Funk Wins 2022 Michael Collins Trophy for Lifetime Achievement</h5>
+                    <div class="captioned-img">
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51959521353_17667db8e7_o.jpeg" alt="" class="img-fluid">
+                        <p class="img-caption"><span>Pioneering Female Aviator Wally Funk Wins 2022 Michael Collins Trophy for Lifetime Achievement</span></p>
                     </div>
                 </a>
             </div>
+        </div>
+        <div class="row py-5">
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/whats-new-on-the-moon-after-50-years" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2022e017003.jpg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">What's New on the Moon ... After 50 Years</h5>
+                    <div class="captioned-img">
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2022e017003.jpg" alt="" class="img-fluid">
+                        <p class="img-caption"><span>What's New on the Moon ... After 50 Years</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/contraband-corned-beef-and-the-gemini-iii-mission" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/john_young_s65-23488orig.jpg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">Contraband Corned Beef and the Gemini III Mission</h5>
+                    <div class="captioned-img">
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/john_young_s65-23488orig.jpg" alt="" class="img-fluid">
+                        <p class="img-caption"><span>Contraband Corned Beef and the Gemini III Mission</span></p>
                     </div>
                 </a>
             </div>
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/5000-exoplanets-and-counting" class="card">
-                    <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jupiter-mass_planet_orbiting_the_nearby_star_epsilon_eridani.jpeg" alt="" class="img-fluid">
-                    <div class="card-body">
-                        <h5 class="card-title">5,000 Exoplanets and Counting</h5>
+                    <div class="captioned-img">
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jupiter-mass_planet_orbiting_the_nearby_star_epsilon_eridani.jpeg" alt="" class="img-fluid">
+                        <p class="img-caption"><span>5,000 Exoplanets and Counting</span></p>
                     </div>
                 </a>
             </div>
