--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col-lg-6">
                 <a href="article.html">
                     <h5 class="article-subtitle">Hubble</h5>
-                    <h2>Hubble Sees the Eye of a Colorful Galaxy</h2>
+                    <h2 class="article-title">Hubble Sees the Eye of a Colorful Galaxy</h2>
                     <img class="img-fluid article-img-lg" src="img/home-1.png" width="100%">
                 </a>
                 <p class="article-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="article.html" class="article-more"><strong>read more</strong></a></p>
