--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -84,10 +84,11 @@
         </nav>
     </header>
 
-    <div class="container py-5">
-        <div class="row px-2 py-5">
-            <div class="col">
-                <h1>Image Gallery</h1>
+    <div class="container pb-5">
+        <div class="row px-2 pb-5">
+            <div class="col img-banner-container">
+                <h1 class="img-banner-title">Image Gallery</h1>
+                <img src="../img/image-gallery-0.png" alt="">
             </div>
         </div>
 
