Update featured jumbotron

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <!-- Top Nav -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="index.html">
@@ -84,7 +85,10 @@
         </nav>
     </header>
 
+    <!-- Content -->
     <div class="container py-5">
+
+        <!-- Featured Articles -->
         <div class="row px-2 py-5">
             <div class="col-lg-6">
                 <a href="article.html">
@@ -95,6 +99,7 @@
                 <p class="article-desc">This finely detailed image shows the heart of NGC 1097, a barred spiral galaxy that lies about 48 million light-years from Earth in the constellation Fornax. This picture reveals the intricacy of the web of stars and dust at NGC 1097’s center, with the long tendrils of dust seen in a dark red hue...<a href="article.html" class="article-more"><strong>read more</strong></a></p>
             </div>
             
+            <!-- Latest Articles -->
             <div class="col-lg-6">
                 <h3 class="article-section">Latest</h3>
                 <ul class="article-list-ver">
@@ -157,19 +162,32 @@
             </div>
         </div>
 
+        <!-- Featured Jumbotron -->
         <div class="row px-4 py-5">
-            <a href="article.html" class="jumbotron row">
-                <div class="col-lg-6">
-                    <h3 class="jumbotron-subtitle">Women At Nasa</h3>
-                    <h2 class="jumbotron-title">NASA Observes Women’s History Month</h2>
-                    <p class="jumbotron-desc">Women are making history at NASA every day. Explore how NASA honors the past and looks to the future as we continue to drive innovation and push the envelope.</p>
+            <a href="Missions/commercial-crew.html" class="jumbotron">
+                <div class="row">
+                    <div class="col-6">
+                        <h2 class="jumbotron-title">Upcoming Launch</h2>
+                    </div>
+                    <div class="col-6">
+                        <p class="jumbotron-subtitle text-uppercase float-right">View All Launches and Landings</p>
+                    </div>
                 </div>
-                <div class="col-lg-6">
-                    <img class="article-img" src="img/home-7.jpg">
-                </div>
+                <hr class="jumbotron-hr">
+               <div class="row">
+                    <div class="col-lg-4">
+                        <img class="article-img" src="img/home-7.png" alt="">
+                    </div>
+                    <div class="col-lg-8">
+                        <h3 class="article-title">NASA's SpaceX Crew-4 Mission to the International Space Station</h3>
+                        <h5 class="article-subtitle"><i>Date: No earlier than April 21, 2022</i></h5>
+                        <p class="jumbotron-desc">Missions teams are targeting no earlier than April 21, 2022, for the launch of NASA’s SpaceX Crew-4 mission to the space station for a six-month science mission aboard the microgravity laboratory.</p>
+                    </div>
+               </div>
             </a>
         </div>
 
+        <!-- Article Feed -->
         <div class="row px-3 py-5">
             <div class="col-12 px-0">
                 <h3 class="article-section">All Stories</h3>
@@ -227,6 +245,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container pt-5 pb-5">
             <div class="row">
