Finished content and add comments

--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <!-- Top Nav -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="../index.html">
@@ -84,7 +85,10 @@
         </nav>
     </header>
 
+    <!-- Content -->
     <div class="container pb-5">
+
+        <!-- Masthead -->
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Image Gallery</h1>
@@ -92,6 +96,7 @@
             </div>
         </div>
 
+        <!-- Featured Image -->
         <div class="row px-2 py-5">
             <div class="col-lg-8">
                 <h2>Image of The Day</h2>
@@ -106,6 +111,7 @@
             </div>
         </div>
 
+        <!-- Featured Jumbotron -->
         <div class="row px-4 py-5">
             <div class="jumbotron row w-100 ml-auto mr-auto">
                 <div class="col-lg-4 ">
@@ -147,7 +153,7 @@
             </div>
         </div>
 
-
+        <!-- Image Feed -->
         <div class="row py-5"> 
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/a-homecoming-for-mark-vande-hei" class="card">
@@ -203,6 +209,7 @@
 
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container pt-5 pb-5">
             <div class="row">
