--- a/Media/nasa-tv.html
+++ b/Media/nasa-tv.html
@@ -29,6 +29,8 @@
 </head>
 
 <body>
+
+    <!-- Top Nav -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="../index.html">
@@ -84,7 +86,10 @@
         </nav>
     </header>
 
+    <!-- Content -->
     <div class="container pb-5">
+
+        <!-- Masthead -->
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">NASA TV</h1>
@@ -92,6 +97,7 @@
             </div>
         </div>
 
+        <!-- Video Player -->
         <div class="row px-2 pb-5">
             <div class="col-lg-8">
                 <div>
@@ -99,23 +105,31 @@
                     <iframe width="100%" height="500" src="https://www.youtube.com/embed/nA9UZF-SZoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="feedMedia" class="d-none"></iframe>
                 </div>
                 
+                <!-- Description Section -->
                 <div class="row pt-3">
+
+                    <!-- Channel Seleciton-->
                     <div class="col-lg-6 text-center">
                         <button class="btn btn-outline-primary w-50" id="btnPublic">Public</button>
                     </div>
                     <div class="col-lg-6 text-center">
                         <button class="btn btn-outline-primary w-50" id="btnMedia">Media</button>
                     </div>
+
+                    <!-- Description -->
                     <div class="col-12 pt-3">
                         <p>​When not showing live news coverage, NASA TV airs a variety of programming. Viewers may see views of the Earth from the International Space Station; replays of mission operations or news conferences; or episodes of produced programs.</p>
                         <p>For the next live program, please see <a href="https://www.nasa.gov/multimedia/nasatv/schedule.html" target="_blank">Live Events on NASA TV.</a></p>
                     </div>
                 </div>
             </div>
+
+            <!-- Schedule -->
             <div class="col-lg-4 pt-5 pt-lg-0">
                 <h2>Schedule</h2>
                 <div class="accordion" id="accordionExample">
 
+                    <!-- Sunday -->
                     <div class="card">
                       <div class="card-header p-0" id="headingOne">
                         <h2 class="mb-0">
@@ -164,6 +178,7 @@
                       </div>
                     </div>
 
+                    <!-- Monday -->
                     <div class="card">
                       <div class="card-header p-0" id="headingTwo">
                         <h2 class="mb-0">
@@ -212,6 +227,7 @@
                       </div>
                     </div>
 
+                    <!-- Tuesday -->
                     <div class="card">
                       <div class="card-header p-0" id="headingThree">
                         <h2 class="mb-0">
@@ -260,6 +276,7 @@
                       </div>
                     </div>
 
+                    <!-- Wednesday -->
                     <div class="card">
                         <div class="card-header p-0" id="headingThree">
                           <h2 class="mb-0">
@@ -313,6 +330,7 @@
                         </div>
                       </div>
 
+                      <!-- Thursday -->
                       <div class="card">
                         <div class="card-header p-0" id="headingThree">
                           <h2 class="mb-0">
@@ -361,6 +379,7 @@
                         </div>
                       </div>
 
+                      <!-- Friday -->
                       <div class="card">
                         <div class="card-header p-0" id="headingThree">
                           <h2 class="mb-0">
@@ -409,6 +428,7 @@
                         </div>
                       </div>
 
+                      <!-- Saturday -->
                       <div class="card">
                         <div class="card-header p-0" id="headingThree">
                           <h2 class="mb-0">
@@ -461,6 +481,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container pt-5 pb-5">
             <div class="row">
