--- a/Media/videos.html
+++ b/Media/videos.html
@@ -29,6 +29,8 @@
 </head>
 
 <body>
+
+    <!-- Top Nav-->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="../index.html">
@@ -84,7 +86,10 @@
         </nav>
     </header>
 
+    <!-- Contents -->
     <div class="container pb-5">
+
+        <!-- Masthead-->
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Videos</h1>
@@ -92,6 +97,7 @@
             </div>
         </div>
 
+        <!-- Video Feed -->
         <div class="row"> 
             <div class="col-lg-3">
                 <a href="https://youtu.be/mtsWDWCCSG0" class="card">
@@ -192,6 +198,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container pt-5 pb-5">
             <div class="row">
