--- a/Topics/humans-in-space.html
+++ b/Topics/humans-in-space.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <!-- Top Nav -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="../index.html">
@@ -84,7 +85,10 @@
         </nav>
     </header>
 
+    <!-- Content -->
     <div class="container pb-5">
+
+        <!-- Masthead -->
         <div class="row px-2">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Humans In Space</h1>
@@ -92,6 +96,7 @@
             </div>
         </div>
 
+        <!-- Masthead Description -->
         <div class="row px-2 py-5">
             <div class="col">
                 <p>Every day since Nov. 2, 2000, people have been orbiting our planet inside the International Space Station, bringing together science, technology and human innovation to enable new technologies and research breakthroughs not possible on Earth. </p>
@@ -99,6 +104,7 @@
             </div>
         </div>
 
+        <!-- Article Feed -->
         <div class="row px-2 py-5">
             <div class="col-12">
                 <h2>Related Stories</h2>
@@ -156,6 +162,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container pt-5 pb-5">
             <div class="row">
