--- a/about.html
+++ b/about.html
@@ -29,6 +29,7 @@
 </head>
 
 <body>
+    <!-- Top Nav -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="index.html">
@@ -84,7 +85,10 @@
         </nav>
     </header>
 
+    <!-- Content -->
     <div class="container pb-5">
+
+        <!-- Masthead -->
         <div class="row px-2 pb-5">
             <div class="col img-banner-container">
                 <h1 class="img-banner-title">Image Gallery</h1>
@@ -92,6 +96,7 @@
             </div>
         </div>
 
+        <!-- Description -->
         <div class="row px-2 py-5">
             <div class="col">
                 <p>The National Aeronautics and Space Administration is America’s civil space program and the global leader in space exploration. The agency has a diverse workforce of just under 18,000 civil servants, and works with many more U.S. contractors, academia, and international and commercial partners to explore, discover, and expand knowledge for the benefit of humanity. With an annual budget of $23.2 billion in Fiscal Year 2021, which is less than 0.5% of the overall U.S. federal budget, NASA supports more than 312,000 jobs across the United States, generating more than $64.3 billion in total economic output (Fiscal Year 2019). </p>
@@ -103,7 +108,7 @@
             </div>
         </div>
         
-
+        <!-- Featured Jumbotron -->
         <div class="row px-4 py-5">
             <div class="jumbotron row w-100 ml-auto mr-auto">
                <div class="col-lg-3">
@@ -141,6 +146,7 @@
             </div>
         </div>
 
+        <!-- Listings -->
         <div class="row px-2 py-5">
             <div class="col-lg-4 my-4">
                 <div class="uni-header">
@@ -193,6 +199,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container pt-5 pb-5">
             <div class="row">
