--- a/article.html
+++ b/article.html
@@ -29,6 +29,8 @@
 </head>
 
 <body>
+
+    <!-- Top Nav -->
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a class="navbar-brand" href="index.html">
@@ -84,6 +86,7 @@
         </nav>
     </header>
 
+    <!-- Article Title -->
     <div class="container pt-5">
         <div class="row px-2 py-5">
             <div class="col">
@@ -94,6 +97,7 @@
         </div>
     </div>
 
+    <!-- Feature Image -->
     <div class="row px-5 py-2">
         <div class="col">
             <img src="img/article-1.jpg" alt="" class="img-fluid">
@@ -102,6 +106,7 @@
         </div>
     </div>
 
+    <!-- Article Body -->
     <div class="container py-5">
         <div class="row px-2 py-5">
             <div class="col">
@@ -110,11 +115,14 @@
                 <p>The research team studied California’s Tulare Basin, part of the Central Valley. The team found that the key to distinguishing between these underground sources of water relates to patterns of sinking and rising ground levels in this heavily irrigated agricultural region.</p>
                 <p>The Central Valley makes up only 1% of U.S. farmland, yet it grows an amazing 40% of the nation’s table fruits, vegetables, and nuts annually. Productivity like that is only possible because farmers augment the valley’s 5 to 10 inches (12 to 25 centimeters) of annual rainfall with extensive groundwater pumping. In drought years, more than 80% of irrigation water comes from underground.</p>
                 <p>After decades of pumping, underground water resources are dwindling. Wells in the Tulare Basin now must be drilled as much as 3,500 feet (over 1,000 meters) deep to find adequate water. There’s no way to measure exactly how much water remains underground, but managers need to make the wisest use of whatever there is. That involves monitoring whether water is being drawn from aquifers or from loose soil, known as the water table. In this large region with tens of thousands of unmetered wells, the only practical way to do that is by using satellite data.</p>
+
+                <!-- Embeded Image -->
                 <div class="py-3">
                     <img src="img/article-2.jpg" alt="" class="img-fluid">
                     <p>This map shows changes in the mass of water, both above ground and underground, in California from 2003 to 2013, as measured by NASA’s GRACE satellite. The darkest red indicates the greatest water loss. The Central Valley is outlined in yellow; the Tulare Basin covers about the southern third. Extreme groundwater depletion has continued to the present.</p>
                     <p><strong>Credits: NASA/GSFC/SVS</strong></p>
                 </div>
+
                 <p>A research team from NASA’s Jet Propulsion Laboratory in Southern California and the U.S. Department of Energy’s Lawrence Berkeley Laboratory in Northern California set out to create a method that would do exactly that. They attacked the problem by combining data on water loss from U.S.-European <a href="javascript:void();">Gravity Recovery and Climate Experiment</a> (GRACE) and <a href="javascript:void();">GRACE Follow-On</a> satellites with data on ground-level changes from a ESA (European Space Agency) Sentinel-1 satellite. Ground-level changes in this region are often related to water loss because when ground is drained of water, it eventually slumps together and sinks into the spaces where water used to be – a process called subsidence.</p>
                 <p>The Tulare Basin is subsiding drastically: The current rate is about one foot (0.3 meters) of sinkage per year. But from one month to the next, the ground may drop, rise or stay the same. What’s more, these changes don’t always line up with expected causes. For example, after a heavy rainfall, the water table rises. It seems obvious that this would cause the ground level to rise, too, but it sometimes sinks instead.</p>
                 <p>The researchers thought these mysterious short-term variations might hold the key to determining the sources of pumped water. “The main question was, how do we interpret the change that’s happening on these shorter time scales: Is it just a blip, or is it important?” said Kyra Kim, a postdoctoral fellow at JPL and coauthor of the <a href="javascript:void();">paper</a>, which appeared in Scientific Reports.</p>
@@ -125,6 +133,7 @@
                 <p>For example, in spring, there’s little rainfall in the Central Valley, so the water table is usually sinking. But runoff from snow in the Sierra Nevada is recharging the aquifers, and that causes the ground level to rise. When rainfall is causing the water table to rise, if the aquifers are compressing at the same time from being pumped during the preceding dry season, the ground level will fall. The model correctly reproduced the effects of weather events like heavy rainfalls in the winter of 2016-17. It also matched the small amount of available data from wells and GPS.</p>
                 <p>Kim pointed out that the new model can be repurposed to represent other agricultural regions where groundwater use needs to be better monitored. With a planned launch in 2023, the <a href="javascript:void();">NASA-ISRO (Indian Space Research Organisation) Synthetic Aperture Radar (NISAR)</a> mission will measure changes in ground level at even higher resolution than Sentinel-1. Researchers will be able to combine NISAR’s dataset with data from GRACE Follow-On in this model for the benefit of agriculture around the globe. “We’re heading toward a really beautiful marriage between remote sensing and numerical models to bring everything together,” Kim said.</p>
                 
+                <!-- Authors -->
                 <div class="py-5">
                     <p><strong>Jane J. Lee / Andrew Wang</strong><br>
                         Jet Propulsion Laboratory, Pasadena, Calif.<br>
@@ -140,6 +149,7 @@
                     </p>
                 </div>
 
+                <!-- SEO Tags -->
                 <div class="py-5">
                     <p>Tags: <i><a href="javascript:void();">Earth, GRACE (Gravity Recovery And Climate Experiment), GRACE-FO, Jet Propulsion Laboratory, NISAR (NASA-ISRO Synthetic Aperture Radar), Water</a></i></p>
                 </div>
@@ -147,6 +157,7 @@
         </div>
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="container pt-5 pb-5">
             <div class="row">
