Change heading levels

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             
             <!-- Latest Articles -->
             <div class="col-lg-6">
-                <h3 class="article-section">Latest</h3>
+                <h2>Latest</h2>
                 <ul class="article-list-ver">
                     <li>
                         <a href="article.html" class="row article-item">
@@ -190,7 +190,7 @@
         <!-- Article Feed -->
         <div class="row px-3 py-5">
             <div class="col-12 px-0">
-                <h3 class="article-section">All Stories</h3>
+                <h2>All Stories</h2>
             </div>
             <div class="card-columns">
                 <a href="article.html" class="card">
