Adjust about page

--- a/about.html
+++ b/about.html
@@ -157,10 +157,8 @@
                     <p>&nbsp;</p>
                 </div>
                 <div class="row pt-4 uni-footer">
-                    <div class="col-6">
+                    <div class="col">
                         <button class="btn btn-primary btn-rounded m-1">View Map</button>
-                    </div>
-                    <div class="col-6">
                         <button class="btn btn-primary btn-rounded m-1">Visit NASA</button>
                     </div>
                 </div>
@@ -173,10 +171,8 @@
                     <p>NASA is committed to providing all categories of small businesses an opportunity to participate in both NASA prime contracts and subcontracts. </p>
                 </div>
                 <div class="row pt-4 uni-footer">
-                    <div class="col-6">
+                    <div class="col">
                         <button class="btn btn-primary btn-rounded m-1">Programs</button>
-                    </div>
-                    <div class="col-6">
                         <button class="btn btn-primary btn-rounded m-1">Paperwork</button>
                     </div>
                 </div>
