Make article images wide

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
             <div class="card-columns">
                 <a href="article.html" class="card">
-                    <img class="article-img" src="img/home-8.jpg">
+                    <img class="article-img-wide" src="img/home-8.jpg">
                     <div class="card-body">
                         <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
                         <h5 class="card-title">Artemis I in Moonlight</h5>
@@ -202,7 +202,7 @@
                     </div>
                 </a>
                 <a href="article.html" class="card">
-                    <img class="article-img" src="img/home-9.jpg">
+                    <img class="article-img-wide" src="img/home-9.jpg">
                     <div class="card-body">
                         <p class="article-subtitle">Equinox<i>Mar 18, 2022</i></p>
                         <h5 class="card-title">March Equinox Welcomes ‘Astronomical’ Spring</h5>
@@ -210,7 +210,7 @@
                     </div>
                 </a>
                 <a href="article.html" class="card">
-                    <img class="article-img" src="img/home-10.jpg">
+                    <img class="article-img-wide" src="img/home-10.jpg">
                     <div class="card-body">
                         <p class="article-subtitle">Spacewalk<i>Mar 16, 2022</i></p>
                         <h5 class="card-title">NASA Astronauts Complete Spacewalk for Solar Array Work</h5>
@@ -218,7 +218,7 @@
                     </div>
                 </a>
                 <a href="article.html" class="card">
-                    <img class="article-img" src="img/home-11.jpg">
+                    <img class="article-img-wide" src="img/home-11.jpg">
                     <div class="card-body">
                         <p class="article-subtitle">Webb Telescope<i>Mar 14, 2022</i></p>
                         <h5 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h5>
@@ -226,7 +226,7 @@
                     </div>
                 </a>
                 <a href="article.html" class="card">
-                    <img class="article-img" src="img/home-12.jpg">
+                    <img class="article-img-wide" src="img/home-12.jpg">
                     <div class="card-body">
                         <p class="article-subtitle">Expedition 66<i>Mar 13, 2022</i></p>
                         <h5 class="card-title">NASA to Air Briefing, Spacewalks to Upgrade Space Station</h5>
@@ -234,7 +234,7 @@
                     </div>
                 </a>
                 <a href="article.html" class="card">
-                    <img class="article-img" src="img/home-13.jpg">
+                    <img class="article-img-wide" src="img/home-13.jpg">
                     <div class="card-body">
                         <p class="article-subtitle">Space Station Research<i>Mar 9, 2022</i></p>
                         <h5 class="card-title">Three Space Station Studies Helping Scientists Understand the Early Universe</h5>
