Change card coulumns to card decks

--- a/index.html
+++ b/index.html
@@ -192,55 +192,68 @@
             <div class="col-12 px-0">
                 <h2>All Stories</h2>
             </div>
-            <div class="card-columns">
-                <a href="article.html" class="card">
-                    <img class="article-img-wide" src="img/home-8.jpg">
-                    <div class="card-body">
-                        <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
-                        <h5 class="card-title">Artemis I in Moonlight</h5>
-                        <p class="card-text">Earth's Moon is seen rising behind NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard atop a mobile launcher as it rolls out to Launch Complex 39B for the first time, Thursday, March 17, 2022, at NASA’s Kennedy Space Center in Florida.</p>
-                    </div>
-                </a>
-                <a href="article.html" class="card">
-                    <img class="article-img-wide" src="img/home-9.jpg">
-                    <div class="card-body">
-                        <p class="article-subtitle">Equinox<i>Mar 18, 2022</i></p>
-                        <h5 class="card-title">March Equinox Welcomes ‘Astronomical’ Spring</h5>
-                        <p class="card-text">Did you know our planet has two types of seasons? They are meteorological and astronomical. What’s the difference?</p>
-                    </div>
-                </a>
-                <a href="article.html" class="card">
-                    <img class="article-img-wide" src="img/home-10.jpg">
-                    <div class="card-body">
-                        <p class="article-subtitle">Spacewalk<i>Mar 16, 2022</i></p>
-                        <h5 class="card-title">NASA Astronauts Complete Spacewalk for Solar Array Work</h5>
-                        <p class="card-text">NASA astronauts Kayla Barron and Raja Chari concluded their spacewalk at 3:06 p.m. EDT after 6 hours and 54 minutes in preparation for upcoming solar array installation.</p>
-                    </div>
-                </a>
-                <a href="article.html" class="card">
-                    <img class="article-img-wide" src="img/home-11.jpg">
-                    <div class="card-body">
-                        <p class="article-subtitle">Webb Telescope<i>Mar 14, 2022</i></p>
-                        <h5 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h5>
-                        <p class="card-text">NASA will hold a virtual media briefing at noon EDT Wednesday, March 16, to provide an update on the James Webb Space Telescope’s mirror alignment. The briefing will air live on NASA TV, the NASA app, and the agency’s website.</p>
-                    </div>
-                </a>
-                <a href="article.html" class="card">
-                    <img class="article-img-wide" src="img/home-12.jpg">
-                    <div class="card-body">
-                        <p class="article-subtitle">Expedition 66<i>Mar 13, 2022</i></p>
-                        <h5 class="card-title">NASA to Air Briefing, Spacewalks to Upgrade Space Station</h5>
-                        <p class="card-text">Crew members from International Space Station Expedition 66 will conduct two spacewalks Tuesday, March 15, and Wednesday, March 23, to continue upgrades to the orbiting laboratory.</p>
-                    </div>
-                </a>
-                <a href="article.html" class="card">
-                    <img class="article-img-wide" src="img/home-13.jpg">
-                    <div class="card-body">
-                        <p class="article-subtitle">Space Station Research<i>Mar 9, 2022</i></p>
-                        <h5 class="card-title">Three Space Station Studies Helping Scientists Understand the Early Universe</h5>
-                        <p class="card-text">Research conducted aboard the International Space Station is helping scientists answer questions about the formation of the universe and origins of life on Earth.</p>
-                    </div>
-                </a>
+            <div class="card-deck">
+                <div class="col-lg-4">
+                    <a href="article.html" class="card">
+                        <img class="article-img-wide" src="img/home-8.jpg">
+                        <div class="card-body">
+                            <p class="article-subtitle">Image of the Day<i>Mar 18, 22</i></p>
+                            <h5 class="card-title">Artemis I in Moonlight</h5>
+                            <p class="card-text">Earth's Moon is seen rising behind NASA’s Space Launch System (SLS) rocket with the Orion spacecraft aboard atop a mobile launcher as it rolls out to Launch Complex 39B for the first time, Thursday, March 17, 2022, at NASA’s Kennedy Space Center in Florida.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">                
+                    <a href="article.html" class="card">
+                        <img class="article-img-wide" src="img/home-9.jpg">
+                        <div class="card-body">
+                            <p class="article-subtitle">Equinox<i>Mar 18, 2022</i></p>
+                            <h5 class="card-title">March Equinox Welcomes ‘Astronomical’ Spring</h5>
+                            <p class="card-text">Did you know our planet has two types of seasons? They are meteorological and astronomical. What’s the difference?</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">    
+                
+                    <a href="article.html" class="card">
+                        <img class="article-img-wide" src="img/home-10.jpg">
+                        <div class="card-body">
+                            <p class="article-subtitle">Spacewalk<i>Mar 16, 2022</i></p>
+                            <h5 class="card-title">NASA Astronauts Complete Spacewalk for Solar Array Work</h5>
+                            <p class="card-text">NASA astronauts Kayla Barron and Raja Chari concluded their spacewalk at 3:06 p.m. EDT after 6 hours and 54 minutes in preparation for upcoming solar array installation.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">    
+                    <a href="article.html" class="card">
+                        <img class="article-img-wide" src="img/home-11.jpg">
+                        <div class="card-body">
+                            <p class="article-subtitle">Webb Telescope<i>Mar 14, 2022</i></p>
+                            <h3 class="card-title">NASA to Discuss Progress as Webb Telescope’s Mirrors Align</h>
+                            <p class="card-text">NASA will hold a virtual media briefing at noon EDT Wednesday, March 16, to provide an update on the James Webb Space Telescope’s mirror alignment. The briefing will air live on NASA TV, the NASA app, and the agency’s website.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">    
+                    <a href="article.html" class="card">
+                        <img class="article-img-wide" src="img/home-12.jpg">
+                        <div class="card-body">
+                            <p class="article-subtitle">Expedition 66<i>Mar 13, 2022</i></p>
+                            <h5 class="card-title">NASA to Air Briefing, Spacewalks to Upgrade Space Station</h5>
+                            <p class="card-text">Crew members from International Space Station Expedition 66 will conduct two spacewalks Tuesday, March 15, and Wednesday, March 23, to continue upgrades to the orbiting laboratory.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4">    
+                    <a href="article.html" class="card">
+                        <img class="article-img-wide" src="img/home-13.jpg">
+                        <div class="card-body">
+                            <p class="article-subtitle">Space Station Research<i>Mar 9, 2022</i></p>
+                            <h5 class="card-title">Three Space Station Studies Helping Scientists Understand the Early Universe</h5>
+                            <p class="card-text">Research conducted aboard the International Space Station is helping scientists answer questions about the formation of the universe and origins of life on Earth.</p>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
