Update Media grids

--- a/Topics/earth.html
+++ b/Topics/earth.html
@@ -100,7 +100,7 @@
         <div class="row px-2 py-5">
             <div class="col">
                 <p><strong>Your Planet Is Changing. We're On It.</strong></p>
-                <p>1-bluemarble_west.jpg NASA uses the vantage point of space to increase our understanding of our home planet, improve lives, and safeguard our future.</p>
+                <p>NASA uses the vantage point of space to increase our understanding of our home planet, improve lives, and safeguard our future.</p>
                 <button class="btn btn-primary btn-rounded mx-2">OVERVIEW</button><button class="btn btn-primary btn-rounded mx-2">IMAGES</button><button class="btn btn-primary btn-rounded mx-2">VIDEOS</button><button class="btn btn-primary btn-rounded mx-2">MEDIA RESOURCES</button>
             </div>
         </div>
