--- a/Media/image-gallery.html
+++ b/Media/image-gallery.html
@@ -143,7 +143,7 @@
                         <div class="uni-header">
                             <h3 class="card-title">Mark Vande Hei and Crew Mates Safely Land</h3>
                         </div>
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51970937381_9d3d2e370a_o.jpeg" alt="" class="img-fluid">
+                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51970937381_9d3d2e370a_o.jpg" alt="" class="img-fluid">
                         <div class="card-body">
                             <p>NASA astronaut Mark Vande Hei, left, and cosmonauts Anton Shkaplerov, center, and Pyotr Dubrov are seen inside their Soyuz MS-19 spacecraft after landing.</p>
                             <button class="btn btn-primary btn-rounded">View Galleries</button>
@@ -154,11 +154,11 @@
         </div>
 
         <!-- Image Feed -->
-        <div class="row py-5"> 
+        <div class="card-deck py-5"> 
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/a-homecoming-for-mark-vande-hei" class="card">
                     <div class="captioned-img">
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2017e029829_large.jpg" alt="" class="img-fluid">
+                        <img src="../img/gallery-5.jpg" alt="" class="img-fluid">
                         <p class="img-caption"><span>A Homecoming for Mark Vande Hei</span></p>
                     </div>
                 </a>
@@ -166,7 +166,7 @@
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/smash-up-how-to-create-rocky-planets" class="card">
                     <div class="captioned-img">
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/pia25161_-_spitzer_collision_cloud.jpg" alt="" class="img-fluid">
+                        <img src="../img/gallery-6.jpg" alt="" class="img-fluid">
                         <p class="img-caption"><span>Smash-Up: How To Create Rocky Planets</span></p>
                     </div>
                 </a>
@@ -174,7 +174,7 @@
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/pioneering-female-aviator-wally-funk-wins-2022-michael-collins-trophy-for-lifetime" class="card">
                     <div class="captioned-img">
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/51959521353_17667db8e7_o.jpeg" alt="" class="img-fluid">
+                        <img src="../img/gallery-7.jpg" alt="" class="img-fluid">
                         <p class="img-caption"><span>Pioneering Female Aviator Wally Funk Wins 2022 Michael Collins Trophy for Lifetime Achievement</span></p>
                     </div>
                 </a>
@@ -184,7 +184,7 @@
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/whats-new-on-the-moon-after-50-years" class="card">
                     <div class="captioned-img">
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jsc2022e017003.jpg" alt="" class="img-fluid">
+                        <img src="../img/gallery-8.jpg" alt="" class="img-fluid">
                         <p class="img-caption"><span>What's New on the Moon ... After 50 Years</span></p>
                     </div>
                 </a>
@@ -192,7 +192,7 @@
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/contraband-corned-beef-and-the-gemini-iii-mission" class="card">
                     <div class="captioned-img">
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/john_young_s65-23488orig.jpg" alt="" class="img-fluid">
+                        <img src="../img/gallery-9.jpg" alt="" class="img-fluid">
                         <p class="img-caption"><span>Contraband Corned Beef and the Gemini III Mission</span></p>
                     </div>
                 </a>
@@ -200,7 +200,7 @@
             <div class="col-lg-4">
                 <a href="https://www.nasa.gov/image-feature/5000-exoplanets-and-counting" class="card">
                     <div class="captioned-img">
-                        <img src="https://www.nasa.gov/sites/default/files/styles/full_width_feature/public/thumbnails/image/jupiter-mass_planet_orbiting_the_nearby_star_epsilon_eridani.jpeg" alt="" class="img-fluid">
+                        <img src="../img/gallery-10.jpg" alt="" class="img-fluid">
                         <p class="img-caption"><span>5,000 Exoplanets and Counting</span></p>
                     </div>
                 </a>
