--- a/Media/videos.html
+++ b/Media/videos.html
@@ -98,10 +98,10 @@
         </div>
 
         <!-- Video Feed -->
-        <div class="row"> 
+        <div class="card-deck"> 
             <div class="col-lg-3">
                 <a href="https://youtu.be/mtsWDWCCSG0" class="card">
-                    <img src="../img/video-0.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-0.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Artemis I Rollout Trailer</h5>
                     </div>
@@ -109,7 +109,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/51WbSe5Qww4" class="card">
-                    <img src="../img/video-1.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-1.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">People of Artemis</h5>
                     </div>
@@ -117,7 +117,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/_yUXG-Fk-X0" class="card">
-                    <img src="../img/video-2.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-2.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">NASA's Exoplanet Superheroes</h5>
                     </div>
@@ -125,7 +125,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/q0giRXI3FvA" class="card">
-                    <img src="../img/video-3.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-3.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Watch NOAA's GOES-T Weather Satellite Launch to Geostationary Orbit</h5>
                     </div>
@@ -133,7 +133,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/7Ns64uz0-AQ" class="card">
-                    <img src="../img/video-4.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-4.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Pioneers to New Frontiers: NASA Women Through the Decades</h5>
                     </div>
@@ -141,7 +141,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/EslP8R8hK88" class="card">
-                    <img src="../img/video-5.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-5.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">An Update on Our Artemis I Mission on This Week @NASA – February 25, 2022</h5>
                     </div>
@@ -149,7 +149,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/vCQ5jnjHjog" class="card">
-                    <img src="../img/video-6.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-6.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Expedition 66 Northrop Grumman CRS-17 Cygnus Cargo Craft Launch - Feb. 19, 2022</h5>
                     </div>
@@ -157,7 +157,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/EmJt3Hj2pZY" class="card">
-                    <img src="../img/video-7.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-7.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Watch S.S. Piers Sellers Cygnus Capsule Launch to the Space Station – Official NASA Broadcast</h5>
                     </div>
@@ -165,7 +165,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/-IAcwLYYFGk" class="card">
-                    <img src="../img/video-8.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-8.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Roving with Perseverance: Findings from One Year on Mars (Live Public Talk)</h5>
                     </div>
@@ -173,7 +173,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/4ELrOBFe_ZE" class="card">
-                    <img src="../img/video-9.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-9.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Fine-Tuning the James Webb Space Telescope on This Week @NASA – February 11, 2022</h5>
                     </div>
@@ -181,7 +181,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/rk0PZ1qnLXw" class="card">
-                    <img src="../img/video-10.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-10.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">NASA’s New Views of Venus’ Surface From Space</h5>
                     </div>
@@ -189,7 +189,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="https://youtu.be/ttqTPtC0UGM" class="card">
-                    <img src="../img/video-11.jpg" alt="" class="img-fluid">
+                    <img src="../img/video-11.jpg" alt="" class="img-video">
                     <div class="card-body">
                         <h5 class="card-title">Science Launching on Northrop Grumman CRS-17 Mission to the Space Station</h5>
                     </div>
